--- a/src/react/Components/InfoIcon/InfoIcon.scss
+++ b/src/react/Components/InfoIcon/InfoIcon.scss
@@ -1,8 +1,9 @@
 .info-icon {
+    margin-left: 5px;
     color: transparent !important;
     cursor: pointer;
-    margin-top: 2px;
-    margin-left: 2px;
+    display: flex;
+    align-items: center;
 }
 
 .info-icon:hover {
