--- a/src/react/Components/IterationRenderer.scss
+++ b/src/react/Components/IterationRenderer.scss
@@ -2,15 +2,15 @@
     display: flex;
     flex-direction: column;
     background: #f4f4f4;
-    padding: 0px;
-    text-align: center;
+    padding: 0px 10px;
     border-radius: 3px;
     border: 1px solid lightgrey;
     font-family: "Segoe UI VSS (Regular)", "-apple-system", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Ubuntu, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     height: 100%;
+
     .iterationname {
         color: #212121;
-        font-weight: bold;
+        font-weight: 500;
         font-size: 12px;
         padding: 2px;
     }
