--- a/src/react/Components/TimelineDialog.scss
+++ b/src/react/Components/TimelineDialog.scss
@@ -4,7 +4,6 @@
 
 .timeline-dialog .container {
     max-height: 300px;
-    overflow: auto;
 }
 
 .custom-duration-footer {
